<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bove.martin.minitwitter.ui.fragments.tweets.TweetsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tweets_like"
        android:name="com.bove.martin.minitwitter.ui.fragments.favtweets.FavTweetsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_fav_tweets" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bove.martin.minitwitter.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>